@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.85 2009-02-03 17:21:19 tcunha Exp $ */
+/* $Id: cmd.c,v 1.86 2009-03-07 09:29:34 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -28,6 +28,7 @@
 const struct cmd_entry *cmd_table[] = {
 	&cmd_attach_session_entry,
 	&cmd_bind_key_entry,
+	&cmd_break_pane_entry,
 	&cmd_choose_session_entry,
 	&cmd_choose_window_entry,
 	&cmd_clock_mode_entry,
