@@ -1,3 +1,7 @@
+07 March 2009
+
+* break-pane command to create a new window using an existing pane.
+
 02 March 2009
 
 * Make escape key timer work properly so escape+key can be used without
@@ -1119,7 +1123,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.256 2009-03-02 16:55:23 nicm Exp $
+$Id: CHANGES,v 1.257 2009-03-07 09:29:54 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
